[package]
name = "auth"
version = "0.0.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
config = { path = "../config" }
jsonwebtoken = "8.3.0"