[package]
name = "notifications"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
config = { path = "../config" }
data = { path = "../data" }
entity = { path = "../entity" }
web-push =  { version = "0.9.5" }
futures = { version = "0.3.28" }
